--- a/writing/references.bib
+++ b/writing/references.bib
@@ -6,6 +6,61 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{talhelm2014large,
+  title={Large-scale psychological differences within China explained by rice versus wheat agriculture},
+  author={Talhelm, Thomas and Zhang, Xiao and Oishi, Shige and Shimin, Chen and Duan, Dechao and Lan, Xiaoli and Kitayama, Shinobu},
+  journal={Science},
+  volume={344},
+  number={6184},
+  pages={603--608},
+  year={2014},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{senzaki2014holistic,
+  title={Holistic versus analytic expressions in artworks: Cross-cultural differences and similarities in drawings and collages by Canadian and Japanese school-age children},
+  author={Senzaki, Sawa and Masuda, Takahiko and Nand, Kristina},
+  journal={Journal of Cross-Cultural Psychology},
+  volume={45},
+  number={8},
+  pages={1297--1316},
+  year={2014},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+
+@article{gernhardt2015cultural,
+  title={Cultural perspectives on children’s tadpole drawings: at the interface between representation and production},
+  author={Gernhardt, Ariane and R{\"u}beling, Hartmut and Keller, Heidi},
+  journal={Frontiers in psychology},
+  volume={6},
+  pages={812},
+  year={2015},
+  publisher={Frontiers}
+}
+
+@article{kuwabara2016cultural,
+  title={Cultural differences in visual object recognition in 3-year-old children},
+  author={Kuwabara, Megumi and Smith, Linda B},
+  journal={Journal of Experimental Child Psychology},
+  volume={147},
+  pages={22--38},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{amir2020cross,
+  title={Cross-cultural, developmental psychology: Integrating approaches and key insights},
+  author={Amir, Dorsa and McAuliffe, Katherine},
+  journal={Evolution and Human Behavior},
+  volume={41},
+  number={5},
+  pages={430--444},
+  year={2020},
+  publisher={Elsevier}
+}
+
+
 @article{yang2021visual,
   title={Visual communication of object concepts at different levels of abstraction},
   author={Yang, Justin and Fan, Judith E},
